@@ -8,6 +8,7 @@ import org.springframework.cloud.client.discovery.DiscoveryClient;
 import tydic.framework.core.util.SpringUtil;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class DiscoveryUtil {
@@ -15,12 +16,12 @@ public class DiscoveryUtil {
         DiscoveryClient discoveryClient = SpringUtil.getAndCache(DiscoveryClient.class);
         //返回地址以及对应权重
         List<WeightRandom.WeightObj<ServiceInstance>> list = discoveryClient.getInstances(serviceId)
-                                                                            .stream()
-                                                                            .map(instance -> {
-                                                                                String weight = instance.getMetadata().getOrDefault("weight", "1");
-                                                                                return new WeightRandom.WeightObj<>(instance, Double.parseDouble(weight));
-                                                                            })
-                                                                            .toList();
+                .stream()
+                .map(instance -> {
+                    String weight = instance.getMetadata().getOrDefault("weight", "1");
+                    return new WeightRandom.WeightObj<>(instance, Double.parseDouble(weight));
+                })
+                .collect(Collectors.toList());
         return RandomUtil.weightRandom(list).next();
     }
 }
